<resources>
    <string name="app_name">GithubUser</string>
    <string name="byadeputra">By Ade Putra Syamsuri</string>
    <string name="CariUser">Cari User</string>
    <string name="favorite">Favorite</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_user">Nama User</string>
    <string name="keterangan">Keterangan</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="title_activity_detail_users">DetailUsers</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_detail_user">DetailUser</string>
    <string name="home">home</string>
    <string name="bookmark">bookmark</string>
    <string name="cari_username">Cari Username</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_user">Favorite UserGit</string>
    <string name="user_id">User ID</string>
    <string name="bagikan">Bagikan</string>
    <string name="tentang">Tentang</string>

</resources>